Alignment / font-size fix JobDistanceRate CSS

--- a/src/components/JobDistanceRate/JobDistanceRate.css
+++ b/src/components/JobDistanceRate/JobDistanceRate.css
@@ -2,7 +2,8 @@
   background-color: #1bd497;
   display: flex;
   justify-content: space-between;
-  padding: 1em 1.25em;
+  padding: 1em 2.5em 1em 2em;
+
 }
 
 .job-distance-rate-header {
@@ -19,7 +20,7 @@
 .job-distance-rate-data {
   color: #fff7fe;
   font-family: "Lato", sans-serif;
-  font-size: 2.75rem;
+  font-size: 2.5rem;
   font-weight: 900;
   margin-top: 0.05em;
 }
